--- a/TheAsker.csproj
+++ b/TheAsker.csproj
@@ -49,11 +49,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="ColorUtility" Version="1.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Models\" />
 	</ItemGroup>
 
 </Project>
